just update tpl

--- a/journals/2022_01_03.org
+++ b/journals/2022_01_03.org
@@ -1,8 +1,12 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_03
 * 图表测试
   | [[思维能力提升]]    | objectives                    | key results                      |
   |:------------------:|:----------------------:|:------------------------:|
   | 身体提升                | 拥有一个健康的身体     | {{embed [[测试1]]}}         |
   | 能力提升                | 提升技术到价值的转化 | {{embed [[测试2]]}}         |
+* 每个月关于工作，必须做的是事情什么？ #card
 ** （一个类似与 anki 的功能），每月必须做的事情是 *啊啊啊啊* 。
 * 某某人的生日哪一天？#card
 ** 某某人生日是 {{cloze 2022-01-24}}
