--- a/journals/2022_01_19.org
+++ b/journals/2022_01_19.org
@@ -1,3 +1,6 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_19
 * 随笔 #随笔
 ** 未必只有贪财才算贪，心有贪念，什么都可以贪。 #箴言
 ** 有钱人的优点就是可以把精力放在让自己贴金的事情上，从而逐渐强化高人一等的自我意识和外在印象。
