--- a/journals/2022_01_20.org
+++ b/journals/2022_01_20.org
@@ -1,3 +1,6 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_20
 * 随笔 #随笔
 ** 北京市通报了 1 月 19 日 一个新增无症状感染者的活动轨迹。正是这份“流调报告”，看哭了无数“打工人”：14 天在京辗转 31 处打零工，多日工作到凌晨！ #人生
 ** 对待问题有三种态度，“凭什么”、“为什么”、“怎样才能”。成年以后，至少不应该再经常用“凭什么”来想问题了，更不该说出口。 #箴言
