--- a/journals/2022_01_16.org
+++ b/journals/2022_01_16.org
@@ -1,3 +1,6 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_16
 * 随笔 #随笔
 ** 不要因为买了很多书没有读而产生任何负罪感，正是这些买了没有读的书让很多书店活了下来。买书读了是读书人，买书不读是慈善家。 #箴言
 ** 我们都需要一套自己的：项目管理 + 信息管理 + 关系维护的体系。 #箴言
