--- a/journals/2022_01_21.org
+++ b/journals/2022_01_21.org
@@ -1,3 +1,6 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_21
 * 随笔 #随笔
 ** 笨办法不一定费时间，比如认认真真去读书、去研究一个问题。 #箴言
 ** 你的人生的发展，很多时候取决于你的短板，短板很严重的话，需要花费巨大的代价才能弥补，甚至弥补不了。比如，原生家庭太穷、长得特别丑、男生个子特别矮、自己挣钱能力太差…… ​​​ #人生
