--- a/journals/2022_01_22.org
+++ b/journals/2022_01_22.org
@@ -1,3 +1,6 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_22
 * 随笔 #随笔
 ** 好多事情都是这样吧：起步是容易的，泊车是困难的；恋爱是容易的，婚姻是困难的；激进是容易的，守成是困难的。 #箴言
 ** 生活中总有一些人恶意求爱、恶意恋爱、恶意求婚、恶意生育，还有一些人恶意早起、恶意上班、恶意读书、恶意理财，……，这不都是害人害己吗？ #forblog
