--- a/journals/2022_01_23.org
+++ b/journals/2022_01_23.org
@@ -1,3 +1,6 @@
+* 属性相关
+#+status: 每日记录
+#+date: 2022_01_23
 * 随笔 #随笔
 ** 我不想生活在认为善良是一种缺点的世界里。 #箴言
 ** 交真朋友其实特别简单 —— 对喜欢你的人好。 随着你的经历增加，你会发现，总会有人喜欢你，也总会有人讨厌你。 有些人，他们天然的就会喜欢你，因为人以类聚物以群分，人与人之间有这种吸引。 你只需要对他们好，就可以了。 #forblog
