update for diary

--- a/journals/2022_01_17.org
+++ b/journals/2022_01_17.org
@@ -1,6 +1,5 @@
-* 属性相关
-#+status: 每日记录
-#+date: 2022_01_17
+#+类型: 每日记录
+#+日期: [[2022_01_17]]
 * 随笔 #随笔
 ** 一个好的道歉要有三步：
 1. 明确动机：不是为了赢回别人的信任，而是为了完善自己的人格；
