--- a/journals/2022_01_09.org
+++ b/journals/2022_01_09.org
@@ -1,6 +1,5 @@
-* 属性相关
-#+status: 每日记录
-#+date: 2022_01_09
+#+类型: 每日记录
+#+日期: [[2022_01_09]]
 * 随笔 #随笔
 ** 努力，但要有方向，有方法；善良，但要留心眼，留底线。 #箴言
 ** 你等着他的道歉，他等着你的感恩。 #箴言
