--- a/journals/2022_01_13.org
+++ b/journals/2022_01_13.org
@@ -1,6 +1,5 @@
-* 属性相关
-#+status: 每日记录
-#+date: 2022_01_13
+#+类型: 每日记录
+#+日期: [[2022_01_13]]
 * 随笔 #随笔
 ** 路径依赖绝大部分时候是不自知的，比如一个靠做题混起来的人会不断肯定做题的意义，tricky 的地方在于你并不能因此而反驳，因为这样的人已经因此而获益了，他们并没错。问题在于，你也跟着这么干未必正确。
 :PROPERTIES:
