--- a/pages/tpl_dairy.org
+++ b/pages/tpl_dairy.org
@@ -4,14 +4,14 @@
 :template-including-parent: false
 :END:
 ** 属性相关
-#+status: 每日记录-模板
-#+date: 2022_01_24
+#+类型: 每日记录
+#+日期: [[2022_01_24]]
 ** 随笔 #随笔
 *** 1
 *** 2
-** 记录 #关注的事件
+** 记录 #记录
 *** 1
 *** 2
-** 图片
+** 图片 #图片
 *** 1
 *** 2
