--- a/journals/2022_01_25.org
+++ b/journals/2022_01_25.org
@@ -12,3 +12,4 @@
 [[../assets/2022-01-25-06-09-05.jpeg]]
 ** 炒股“秘诀” #图片 #炒股
 [[../assets/2022-01-25-06-10-10.jpeg]]
+![图片](../assets/2022-01-25-06-09-05.jpeg)
