--- a/journals/2022_01_03.org
+++ b/journals/2022_01_03.org
@@ -9,7 +9,7 @@
 ** （一个类似与 anki 的功能），每月必须做的事情是 *啊啊啊啊* 。
 * 某某人的生日哪一天？#card
 ** 某某人生日是 {{cloze 2022-01-24}}
-* 记录
+* #一图胜千言
 ** 孩子正确的引导 #图片
 [[../assets/2022-01-03-00-56-39.png]]
 ** 实验室悖论 #图片
