--- a/journals/2022_01_05.org
+++ b/journals/2022_01_05.org
@@ -5,7 +5,7 @@
 :collapsed: false
 :END:
 - 知识已经不是碎片化，知识现在已经趋于粉末化了。
-* 记录
+* #一图胜千言
 ** 开新坑 #图片
 [[../assets/2022-01-05-06-13-40.jpeg]]
 ** 新年快乐 #图片
