--- a/journals/2022_01_06.org
+++ b/journals/2022_01_06.org
@@ -2,7 +2,7 @@
 #+日期: [[2022_01_06]]
 * 随笔 #随笔
 - 前有为众抱薪者，毙于风雪中。现有冷漠的灰尘，谁家的新坟。
-* 记录
+* #一图胜千言
 ** 读书照亮人生 #图片
 [[../assets/2022-01-06-00-56-38.jpeg]]
 ** 我的做事方式 #图片
