--- a/journals/2022_01_08.org
+++ b/journals/2022_01_08.org
@@ -1,7 +1,7 @@
 #+类型: 每日记录
 #+日期: [[2022_01_08]]
 * 随笔 #随笔
-* 记录
+* #一图胜千言
 ** 能用就行 #图片
 [[../assets/2022-01-08-05-58-09.jpeg]]{:height 745, :width 405}
 ** 媒体的作用 #图片
