--- a/journals/2022_01_12.org
+++ b/journals/2022_01_12.org
@@ -6,7 +6,7 @@
 - 加强自己的学习力，接受新鲜事物的能力，不要自我脱离。
 - 交流能力，语言表达能力，软实力。恰到好处的表达
 - 利他能力，修炼自己，造福他人。
-* 记录
+* #一图胜千言
 ** 人生三大错觉 #图片
 [[../assets/2022-01-12-04-50-44.jpeg]]
 ** 计划的真实执行 #图片
