--- a/journals/2022_01_13.org
+++ b/journals/2022_01_13.org
@@ -8,7 +8,7 @@
 这很吊诡，但却是存在的：对方没错，可你未必能跟着干。这也是警醒各种成功学经验的关键点。
 最蛋疼的是，在走通你自己的路之前，根本分不清哪些路走得通、哪些路走不通，哪怕指路的仙人们都是真诚得想帮你，也不一定能沿着他们的路走下去，最后多半还是凭运气。 #forblog
 ** “平庸之恶”就像表面蔓延的一层霉菌。它没有思考，因而缺乏深度。这就是平庸。只有善才有深度，才是根本的。 —— 汉娜·阿伦特 #箴言
-* 记录
+* #一图胜千言
 ** 穷人和富人 #图片
 [[../assets/2022-01-13-05-56-56.jpeg]]
 ** 抗癌药的真相 #图片
