--- a/journals/2022_01_14.org
+++ b/journals/2022_01_14.org
@@ -6,7 +6,7 @@
 2. 夫妻伴侣
 3. 觉醒的自己
 若没有优越的家庭，如意的伴侣，就一定要唤醒那个强大的自己重新洗牌。#forblog
-* 记录
+* #一图胜千言
 ** 吃瓜吃到自己家 #图片
 [[../assets/2022-01-14-06-01-27.jpeg]]
 ** 循序渐进而非一蹴而就 #图片
