--- a/journals/2022_01_15.org
+++ b/journals/2022_01_15.org
@@ -3,7 +3,7 @@
 * 随笔 #随笔
 ** 史铁生：“拖延的最大坏处还不是耽误，而是会使自己变得犹豫，甚至丧失信心。不管什么事，决定了，就立刻去做，这本身就能使人生气勃勃，保持一种主动和快乐的心情。” #箴言
 ** 保持初心，积极向上。聪明人，下笨功夫。 #箴言
-* 记录
+* #一图胜千言
 ** 保持自我 #图片
 [[../assets/2022-01-15-05-10-30.jpeg]]
 ** 视角 #图片
