--- a/journals/2022_01_19.org
+++ b/journals/2022_01_19.org
@@ -5,7 +5,7 @@
 ** 有钱人的优点就是可以把精力放在让自己贴金的事情上，从而逐渐强化高人一等的自我意识和外在印象。
 穷人不是不愿贴金，一是精力顾不上，二是在穷人的世界里，那些华而不实的贴金不顶用。
 物以稀为贵，久而久之你就会以为那些玩意儿很厉害，因为你确实也没足够多的闲暇和资金去搞那些玩意儿。 #forblog
-* 记录
+* #一图胜千言
 ** 我和我的同龄人 #图片
 [[../assets/2022-01-19-06-25-08.jpeg]]
 ** 魔幻，和尚算命 #图片
