--- a/journals/2022_01_23.org
+++ b/journals/2022_01_23.org
@@ -4,7 +4,7 @@
 ** 我不想生活在认为善良是一种缺点的世界里。 #箴言
 ** 交真朋友其实特别简单 —— 对喜欢你的人好。 随着你的经历增加，你会发现，总会有人喜欢你，也总会有人讨厌你。 有些人，他们天然的就会喜欢你，因为人以类聚物以群分，人与人之间有这种吸引。 你只需要对他们好，就可以了。 #forblog
 ** 人只有做真实的自己时，才会有独特的个人魅力，伪装出来的人设，崩塌只是时间问题。 #人生
-* 记录
+* #一图胜千言
 ** 喝酒的进度 #图片
 [[../assets/2022-01-23-09-03-22.jpeg]]
 ** 投资是一个很难的事情 #图片
