--- a/pages/笔记模板.org
+++ b/pages/笔记模板.org
@@ -3,15 +3,18 @@
 :template: 每日模板
 :template-including-parent: false
 :END:
-** 属性相关
+** 1
+```
 #+类型: 每日记录
 #+日期: [[2022_01_24]]
+#+主页: [[磐石-每日分享]]
+```
 ** 随笔 #随笔
 *** 1
 *** 2
 ** 记录 #记录
 *** 1
 *** 2
-** 图片 #图片
+** #一图胜千言
 *** 1
 *** 2
