--- a/pages/2022_01_26.org
+++ b/pages/2022_01_26.org
@@ -1,5 +1,7 @@
 #+类型: 每日记录
 #+日期: [[2022_01_26]]
+#+主页: [[磐石-每日分享]]
+
 * 随笔 #随笔
 ** 照顾好自己的情绪和健康，这场人生，你就赢了一大半，其余的其余，人生自有安排。 #人生
 ** 新的一年，希望一切都好 — 平安喜乐。 #祝福
