--- a/pages/磐石-每日分享.org
+++ b/pages/磐石-每日分享.org
@@ -1,7 +1,8 @@
+* 2022 年进度条
+[:::::..............................................] 2022 Year Progress [ 8% ] [\]
 * 说明
-只记录 [[随笔]]、[[记录]]、[[图片]] 各 2-3 个累计不超过 9 条的每日分享。
-
-都是浪费时间，那为什么不选择自己喜欢的方式浪费呢？
+** 只记录 [[随笔]]、[[记录]]、[[图片]] 各 2-3 个累计不超过 9 条的每日分享。
+** 闲暇之余既然都是浪费时间，那为什么不选择自己喜欢的方式浪费呢？
 ** 关于我
 - [[https://www.geekpanshi.com/panshi/][博客]]
 - [[https://github.com/xingangshi][GitHub]]
