--- a/pages/2022_02_10.org
+++ b/pages/2022_02_10.org
@@ -4,7 +4,7 @@
 
 * 随笔 #随笔
 ** 八孩妈的事情，看起来和徐州、江苏、乃至中国都无关，俨然丰县独立成国的样子。 #人生
-** 很多人都在讨论谷凌爱的成长之路和教育经验，殊不知自己可能只是下一个杨某侠而已。 #读书与思考
+** 很多人都在讨论谷爱凌的成长之路和教育经验，殊不知自己可能只是下一个杨某侠而已。 #读书与思考
 * 记录 #记录
 ** 山西文物地图 #历史
 [[../assets/2022-02-10-04-58-46.jpeg]]
