--- a/pages/磐石-每日分享.org
+++ b/pages/磐石-每日分享.org
@@ -3,6 +3,7 @@
 ** 只记录 [[随笔]]、[[记录]]、[[图片]] 各 2-3 个累计不超过 9 条的每日分享。
 ** 闲暇之余既然都是浪费时间，那为什么不选择自己喜欢的方式浪费呢？
 ** 生产垃圾是不可能有持久力的，垃圾 → 无用 → 无正向反馈 → 不会分泌多巴胺 → 无法坚持。
+** 忌好为人师、减少内耗，轻装践行。
 ** 关于我 [[https://www.geekpanshi.com/panshi/][博客]] [[https://github.com/xingangshi][GitHub]] [[https://twitter.com/geekpanshi][Twitter]]。
 * 归类
 ** 日常记录
