--- a/pages/归档202202.org
+++ b/pages/归档202202.org
@@ -4,7 +4,7 @@
 :PROPERTIES:
 :query-sort-by: 日期
 :query-table: true
-:query-sort-desc: false
+:query-sort-desc: true
 :query-properties: [:类型 :日期]
 :END:
 #+BEGIN_QUERY
