获取当前周数

--- a/pages/磐石-每日分享.org
+++ b/pages/磐石-每日分享.org
@@ -1,4 +1,4 @@
-* 2022 年进度条 [ 13% ]
+* 2022 年进度条 [ 13% ]，第 [ 8 ] 周。
 * 说明
 ** 只记录 [[随笔]]、[[记录]]、[[图片]] 各 2-3 个累计不超过 9 条的每日分享。
 ** 闲暇之余既然都是浪费时间，那为什么不选择自己喜欢的方式浪费呢？
