--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -17,3 +17,26 @@
 
 清醒点，请别再“郁郁不得志”。
 
+* [[2022_02_22]] [[Feb 22st, 2022]]
+** #今日鸡汤 #周记
+
+根据相关法律法规和政策，该内容已无法被公开查看。
+
+** #今日文章 #周记
+
+《人与时》
+
+一人说，将来胜过现在。
+
+一人说，现在远不及从前。
+
+一人说，什么?
+时道，你们都侮辱我的现在。
+
+从前好的，自己回去。
+将来好的，跟我前去。
+
+这说什么的，
+我不和你说什么。
+
+【注释】本篇最初发表于一九一八年七月十五日《新青年》第五卷第一号，署名唐俟。
