调整关联关系

--- a/pages/2022_01_12.org
+++ b/pages/2022_01_12.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_12]]
 #+主页: [[归档202201]]
+#+date: [[Jan 12th, 2022]]
 
 * 随笔 #随笔
 ** 把小事捂成大事然后集中力量办大事，把大事弄成变事然后把丧事办成喜事。 #箴言
