--- a/pages/2022_01_22.org
+++ b/pages/2022_01_22.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_22]]
 #+主页: [[归档202201]]
+#+date: [[Jan 22th, 2022]]
 
 * 随笔 #随笔
 ** 好多事情都是这样吧：起步是容易的，泊车是困难的；恋爱是容易的，婚姻是困难的；激进是容易的，守成是困难的。 #箴言
