--- a/pages/2022_01_26.org
+++ b/pages/2022_01_26.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_26]]
 #+主页: [[归档202201]]
+#+date: [[Jan 26th, 2022]]
 
 * 随笔 #随笔
 ** 照顾好自己的情绪和健康，这场人生，你就赢了一大半，其余的其余，人生自有安排。 #人生
