--- a/pages/2022_01_30.org
+++ b/pages/2022_01_30.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_30]]
 #+主页: [[归档202201]]
+#+date: [[Jan 30th, 2022]]
 
 * 随笔 #随笔
 ** 怎样判断另一半是否适合结婚？其实可以逆向思维反问一下自己，如何判断自己是否适合结婚，这可能是一个更好更有大发现的问题。 #人生
