--- a/pages/2022_01_31.org
+++ b/pages/2022_01_31.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_31]]
 #+主页: [[归档202201]]
+#+date: [[Jan 31st, 2022]]
 
 * 随笔 #随笔
 ** 灵感转瞬即逝，我们要能够随时随地去记录自己的灵感，以备不时之需。 #箴言
