--- a/pages/2022_02_02.org
+++ b/pages/2022_02_02.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_02]]
 #+主页: [[归档202202]]
+#+date: [[Feb 2nd, 2022]]
 
 * 随笔 #随笔
 ** 你的小孩有一天会长成大人，他会有自己的想法、信仰和观念，如果你不能接受这些，那请不要生孩子。
