--- a/pages/2022_02_03.org
+++ b/pages/2022_02_03.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_03]]
 #+主页: [[归档202202]]
+#+date: [[Feb 3rd, 2022]]
 
 * 随笔 #随笔
 ** 青少年朋友们，请留心注意那些差点被禁掉的书。 如果可以的话，请直奔这些书去阅读。 对每一本这样的书，尝试找出有人想要禁掉它的原因。 然后再问自己，那些想要禁掉它的人是在为你着想吗？他们可以被信任吗？ #读书与思考
