--- a/pages/2022_02_11.org
+++ b/pages/2022_02_11.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_11]]
 #+主页: [[归档202202]]
+#+date: [[Feb 11st, 2022]]
 
 * 随笔 #随笔
 ** 多读书，读好书，可以摆脱七宗罪：傲慢、贪婪、淫欲、嫉妒、暴食、愤怒、懒惰。 #读书与思考
