--- a/pages/2022_02_12.org
+++ b/pages/2022_02_12.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_12]]
 #+主页: [[归档202202]]
+#+date: [[Feb 12st, 2022]]
 
 * 随笔 #随笔
 ** 聪明就是有能力解决一个具体的困难问题。智慧就是始终让自己有很多选择，以至于根本不需要被迫去解决什么刁钻困难的问题。 #人生
