--- a/pages/2022_02_21.org
+++ b/pages/2022_02_21.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_21]]
 #+主页: [[归档202202]]
+#+date: [[Feb 21st, 2022]]
 
 * 随笔 #随笔
 ** 原本以为岁月静好的“岁静”者，也终于认清了自己和那一条铁链的距离。 #八孩妈 #箴言
@@ -13,5 +14,5 @@
 * #一图胜千言
 ** 男人的一生 #图片
 [[../assets/2022-02-21-00-38-42.jpeg]]
-** 孩子哭了抱给娘 #图片 
+** 孩子哭了抱给娘 #图片
 [[../assets/2022-02-21-00-39-13.jpeg]]
