--- a/pages/2022_01_03.org
+++ b/pages/2022_01_03.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_03]]
 #+主页: [[归档202201]]
+#+date: [[Jan 3rd, 2022]]
 
 * 图表测试
   | [[思维能力提升]]    | objectives             | key results              |
