--- a/pages/2022_01_07.org
+++ b/pages/2022_01_07.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_07]]
 #+主页: [[归档202201]]
+#+date: [[Jan 7th, 2022]]
 
 * 随笔 #随笔
 - 废寝忘食，与我无瓜，废、寝、忘、食，我本人也；富坚义博，我本人也，富、坚、义、博，与我无瓜。
