--- a/pages/2022_01_16.org
+++ b/pages/2022_01_16.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_16]]
 #+主页: [[归档202201]]
+#+date: [[Jan 16th, 2022]]
 
 * 随笔 #随笔
 ** 不要因为买了很多书没有读而产生任何负罪感，正是这些买了没有读的书让很多书店活了下来。买书读了是读书人，买书不读是慈善家。 #箴言
