--- a/pages/2022_01_24.org
+++ b/pages/2022_01_24.org
@@ -1,6 +1,7 @@
 #+类型: 2201
 #+日期: [[2022_01_24]]
 #+主页: [[归档202201]]
+#+date: [[Jan 24th, 2022]]
 
 * 随笔 #随笔
 ** 故乡即他乡，他乡遇故人，竟不知如何称谓。他乡即故乡，故乡遇老乡，两眼泪汪汪。 #人生
