--- a/pages/2022_02_07.org
+++ b/pages/2022_02_07.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_07]]
 #+主页: [[归档202202]]
+#+date: [[Feb 7st, 2022]]
 
 * 随笔 #随笔
 ** 家不必基于异性恋关系、家不必基于血缘的联系、家里也不一定要有孩子。你的家，按你的定义来。 #人生 #读书与思考
