--- a/pages/2022_02_19.org
+++ b/pages/2022_02_19.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_19]]
 #+主页: [[归档202202]]
+#+date: [[Feb 19st, 2022]]
 
 * 随笔 #随笔
 ** 感兴趣的东西总归有用，只是什么时候有用，不知道。 #读书与思考
@@ -8,7 +9,7 @@
 * 记录 #记录
 ** 中国 13 个最牛的县 #历史 #数据
 [[../assets/2022-02-19-06-22-52.jpeg]]
-** 50个最美的地方 #数据 #人文 
+** 50个最美的地方 #数据 #人文
 [[../assets/2022-02-19-06-24-36.jpeg]]
 * #一图胜千言
 ** 不同的爱 #图片 #人生
