--- a/pages/2022_02_20.org
+++ b/pages/2022_02_20.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_20]]
 #+主页: [[归档202202]]
+#+date: [[Feb 20st, 2022]]
 
 * 随笔 #随笔
 ** 从来没有一个时期像互联网时代这样，人们渴望和素未谋面的人联系，同时又对身边的人尽可能远离。 #读书与思考 #人生
@@ -13,5 +14,5 @@
 * #一图胜千言
 ** 口红科普   #图片
 [[../assets/2022-02-20-00-10-47.jpeg]]
-** 视觉偏差 #图片 
+** 视觉偏差 #图片
 [[../assets/2022-02-20-00-14-03.jpeg]]
