--- a/pages/2022_02_22.org
+++ b/pages/2022_02_22.org
@@ -1,6 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_22]]
 #+主页: [[归档202202]]
+#+date: [[Feb 22st, 2022]]
 
 * 随笔 #随笔
 ** 很多人对家丑没意见，主要是对外扬有意见。 #人生 #箴言
@@ -12,7 +13,7 @@
 ** 真觉醒年代 #八孩妈 #历史
 [[../assets/2022-02-22-03-41-01.jpeg]]
 * #一图胜千言
-** 各国文学的特点 #图片 #读书与思考 
+** 各国文学的特点 #图片 #读书与思考
 [[../assets/2022-02-22-03-33-22.jpeg]]
-** 买书与读书 #图片 
+** 买书与读书 #图片
 [[../assets/2022-02-22-03-36-58.jpeg]]
