--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -41,3 +41,53 @@
 我不和你说什么。
 
 【注释】本篇最初发表于一九一八年七月十五日《新青年》第五卷第一号，署名唐俟。
+
+
+* [[2022_02_23]] [[Feb 23st, 2022]]
+** #今日鸡汤 #周记
+
+妈妈带着爸爸去德国治疗肺癌，我傻傻信了他们是去出差顺便旅游，最后妈妈带着爸爸尸体回来的，连爸爸最后一面都没有见到。
+
+** #今日文章 #周记 #八孩妈
+
+《小花梅（当代民谣）》
+
+作者：大风如刀
+
+小花梅，小花梅，
+身世飘零你是谁？
+千家万户乖乖女，
+一别爹娘唤不归。
+唤不归，小花梅，
+骨肉亲情梦相随。
+可怜天下父母心，
+多少血泪化成灰。
+
+小花梅，小花梅，
+飘来飘去你是谁？
+燕山雪花大如席，
+王师不讨盗花贼。
+盗花贼手段黑，
+官家助力草上飞。
+盲山多少拴狗链。
+拴的都是小花梅。
+
+小花梅，小花梅，
+命如蝼蚁你是谁？
+莫说世界不要俺，
+天道不存万户悲。
+万户悲，小花梅，
+怒指长安绣成堆。
+歌舞升平豪门宴，
+笙管排萧夜夜吹。
+
+小花梅，小花梅，
+声声血泪声声悲。
+干呼万唤人神愤，
+怒海狂潮誓灭贼！
+誓灭贼，胡不归？
+管他式微不式微。
+但凭苍生十四亿，
+不信天谴不轮回！
+
+20220211
