update some invalid links

--- a/pages/2022_02_05.org
+++ b/pages/2022_02_05.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_05]]
 #+主页: [[归档202202]]
-#+date: [[Feb 5st, 2022]]
+#+date: [[Feb 5th, 2022]]
 
 * 随笔 #随笔
 ** “生活条件不好的，相对都比较坚强。”但是谁又想要这种坚强呢？！ #人生
