--- a/pages/2022_02_06.org
+++ b/pages/2022_02_06.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_06]]
 #+主页: [[归档202202]]
-#+date: [[Feb 6st, 2022]]
+#+date: [[Feb 6th, 2022]]
 
 * 随笔 #随笔
 ** 人不能丧失两大情怀：一是对爱和自由的追求二是对不公的愤怒和对弱者的怜悯之心。 #箴言
