--- a/pages/2022_02_08.org
+++ b/pages/2022_02_08.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_08]]
 #+主页: [[归档202202]]
-#+date: [[Feb 8st, 2022]]
+#+date: [[Feb 8th, 2022]]
 
 * 随笔 #随笔
 ** 网络记录的文字，可能只是人完整生活的 10%，但旁观者会把它当成书写者的 100%。 这其实，是最大的误会。当然，这 10%，有可能也是最心底的那部份底色。 #读书与思考
