--- a/pages/2022_02_09.org
+++ b/pages/2022_02_09.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_09]]
 #+主页: [[归档202202]]
-#+date: [[Feb 9st, 2022]]
+#+date: [[Feb 9th, 2022]]
 
 * 随笔 #随笔
 ** 自己没能力就说没能力。怎么你到哪儿，哪都大环境不好：你是破坏大环境的人啊！ #人生 #箴言
