--- a/pages/2022_02_15.org
+++ b/pages/2022_02_15.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_15]]
 #+主页: [[归档202202]]
-#+date: [[Feb 15st, 2022]]
+#+date: [[Feb 15th, 2022]]
 
 * 随笔 #随笔
 ** 不管是什么东西，只要你晓得会失去它，自然也就会爱上它了。 #箴言
