--- a/pages/2022_02_16.org
+++ b/pages/2022_02_16.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_16]]
 #+主页: [[归档202202]]
-#+date: [[Feb 16st, 2022]]
+#+date: [[Feb 16th, 2022]]
 
 * 随笔 #随笔
 ** 富二代不努力扶贫帮我就是错。 #巨婴
