--- a/pages/2022_02_18.org
+++ b/pages/2022_02_18.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_18]]
 #+主页: [[归档202202]]
-#+date: [[Feb 18st, 2022]]
+#+date: [[Feb 18th, 2022]]
 
 * 随笔 #随笔
 ** 关你屁事？关我屁事？关他屁事？有什么屁事？屁大点的事！ #人生
