--- a/pages/2022_02_22.org
+++ b/pages/2022_02_22.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_22]]
 #+主页: [[归档202202]]
-#+date: [[Feb 22st, 2022]]
+#+date: [[Feb 22nd, 2022]]
 
 * 随笔 #随笔
 ** 很多人对家丑没意见，主要是对外扬有意见。 #人生 #箴言
