--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -18,7 +18,7 @@
 清醒点，请别再“郁郁不得志”。
 
 
-* [[2022_02_22]] [[Feb 22st, 2022]]
+* [[2022_02_22]] [[Feb 22nd, 2022]]
 ** #今日鸡汤 #周记
 
 根据相关法律法规和政策，该内容已无法被公开查看。
@@ -43,7 +43,7 @@
 【注释】本篇最初发表于一九一八年七月十五日《新青年》第五卷第一号，署名唐俟。
 
 
-* [[2022_02_23]] [[Feb 23st, 2022]]
+* [[2022_02_23]] [[Feb 23rd, 2022]]
 ** #今日鸡汤 #周记
 
 妈妈带着爸爸去德国治疗肺癌，我傻傻信了他们是去出差顺便旅游，最后妈妈带着爸爸尸体回来的，连爸爸最后一面都没有见到。
