--- a/pages/2022_02_04.org
+++ b/pages/2022_02_04.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_04]]
 #+主页: [[归档202202]]
-#+date: [[Feb 4st, 2022]]
+#+date: [[Feb 4th, 2022]]
 
 * 随笔 #随笔
 ** 每个人都有难堪的过去只是大小不同而已，而且……，未来会怎样也没有人知道。 #箴言
