--- a/pages/2022_02_10.org
+++ b/pages/2022_02_10.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_10]]
 #+主页: [[归档202202]]
-#+date: [[Feb 10st, 2022]]
+#+date: [[Feb 10th, 2022]]
 
 * 随笔 #随笔
 ** 八孩妈的事情，看起来和徐州、江苏、乃至中国都无关，俨然丰县独立成国的样子。 #人生
