--- a/pages/2022_02_14.org
+++ b/pages/2022_02_14.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_14]]
 #+主页: [[归档202202]]
-#+date: [[Feb 14st, 2022]]
+#+date: [[Feb 14th, 2022]]
 
 * 随笔 #随笔
 ** 每个人在自己每个年龄段做了他认为对的事。 #箴言
