--- a/pages/2022_02_17.org
+++ b/pages/2022_02_17.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_17]]
 #+主页: [[归档202202]]
-#+date: [[Feb 17st, 2022]]
+#+date: [[Feb 17th, 2022]]
 
 * 随笔 #随笔
 ** 我们必须知道，我们必将知道。 #名人名言 #箴言
