--- a/pages/2022_02_19.org
+++ b/pages/2022_02_19.org
@@ -1,7 +1,7 @@
 #+类型: 2202
 #+日期: [[2022_02_19]]
 #+主页: [[归档202202]]
-#+date: [[Feb 19st, 2022]]
+#+date: [[Feb 19th, 2022]]
 
 * 随笔 #随笔
 ** 感兴趣的东西总归有用，只是什么时候有用，不知道。 #读书与思考
