--- a/pages/笔记模板.org
+++ b/pages/笔记模板.org
@@ -6,8 +6,9 @@
 ** 1
 ```
 #+类型: 2202
-#+日期: [[2022_02_18]]
+#+日期: [[2022_02_24]]
 #+主页: [[归档202202]]
+#+date: [[Feb 24th, 2022]]
 ```
 ** 随笔 #随笔
 *** 1
