--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -91,3 +91,23 @@
 不信天谴不轮回！
 
 20220211
+
+
+* [[2022_02_24]] [[Feb 24th, 2022]]
+** #今日鸡汤 #周记
+
+这件事将来一定会上史书的，历史如刀，看谁能逃。 
+
+** #今日文章 #周记
+
+《正能量》
+
+你说我经常在群里发一些负面的内容，搞的你不悦。其实我也有很多正面的讯息，也就是你说的正能量的事情：
+1. 我昨晚娃都睡了，我起来给 kindle 换了电池，有可以再战 2 年了；
+2. 我朋友的弟弟裸考过六级、昨天考研成绩初试出来 414 分；
+3. 我朋友自己写了个语言，我试了了，很不错；
+4. 昨天我搞定了一个困扰有小半年的软件安装问题：先升级 Debian 系统，再重新安装；
+5. 我朋友下个月生二胎，儿女双全；
+……
+
+我想说的是：正能量其实很多，但是我们更应该面对负面，保持乐观的心态，积极的去生活。
