--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -111,3 +111,19 @@
 ……
 
 我想说的是：正能量其实很多，但是我们更应该面对负面，保持乐观的心态，积极的去生活。
+
+
+* [[2022_02_25]] [[Feb 25th, 2022]]
+** #今日鸡汤 #周记
+
+不管是知识、认知、人脉、财力……，不管好赖，这些东西一个家族本身都在传承，人不是完全从零开始的
+
+#今日文章 #周记 #八孩妈
+
+《拐卖的婚姻不应合法》
+
+最大的逻辑矛盾是什么？是办结婚证的过程已经确认违法，相关人员也已追责了，婚姻却仍然被认定为真实有效，买家仍然被认定为“丈夫”，按照家庭成员虐待罪而不是绑架、伤害罪追究。
+
+如果说早年司法实践中有不得已的妥协，那么时到今日，“拐卖婚无效”这一基本原则应成为共识。否则，就是变相承认买卖婚，把拐卖这一严重犯罪偷换成“家庭事务”，买卖同罪也将成为空谈。
+
+此外拐卖婚姻并不适用“事实婚姻”。事实婚姻是指男女双方在主观上具有永久生活的目的，在客观上具有未经结婚登记机关登记，未领取结婚证即以夫妻名义同居生活的事实。且 1994 年后，我国已不承认事实婚姻。
