--- a/pages/归档202202.org
+++ b/pages/归档202202.org
@@ -1,3 +1,5 @@
+
+
 * 日志归档
 #+类型: 2022年
 #+主页: [[磐石-每日分享]]
@@ -5,7 +7,7 @@
 :query-sort-by: 日期
 :query-table: true
 :query-sort-desc: true
-:query-properties: [:类型 :date :日期 ]
+:query-properties: [:类型 :date]
 :END:
 #+BEGIN_QUERY
 {:title [:h3 "2022 年 2 月归档"]
