--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -127,3 +127,29 @@
 如果说早年司法实践中有不得已的妥协，那么时到今日，“拐卖婚无效”这一基本原则应成为共识。否则，就是变相承认买卖婚，把拐卖这一严重犯罪偷换成“家庭事务”，买卖同罪也将成为空谈。
 
 此外拐卖婚姻并不适用“事实婚姻”。事实婚姻是指男女双方在主观上具有永久生活的目的，在客观上具有未经结婚登记机关登记，未领取结婚证即以夫妻名义同居生活的事实。且 1994 年后，我国已不承认事实婚姻。
+
+
+* [[2022_02_26]] [[Feb 26th, 2022]]
+** #今日鸡汤 #周记
+
+对于日本，忘记历史，等于背叛；对于苏俄，纠缠历史，毫无意义；对于我们，了解历史，等于犯罪。
+
+** #今日文章 #周记
+
+《拿破仑与隋那》
+
+鲁迅
+
+我认识一个医生，忙的，但也常受病家的攻击，有一回，自解自叹道:要得称赞，最好是杀人，你把拿破仑和隋那（Edward Jenner，1749-1823）去比比看……
+
+我想，这是真的。拿破仑的战绩，和我们什么相干呢，我们却总敬服他的英雄。甚而至于自己的祖宗做了蒙古人的奴隶，我们却还恭维成吉思;从现在的卐(4字眼睛看来，黄人已经是劣种了，我们却还夸耀希特拉。
+
+因为他们三个，都是杀人不眨眼的大灾星。
+
+但我们看看自己的臂膊，大抵总有几个疤，这就是种过牛痘的痕迹，是使我们脱离了天花的危症的。自从有这种牛痘法以来,在世界上真不知救活了多少孩子，— 虽然有些人大起来也还是去给英雄们做炮灰，但我们有谁记得这发明者隋那的名字呢？
+
+杀人者在毁坏世界，救人者在修补它，而炮灰资格的诸公，却总在恭维杀人者。
+
+这看法倘不改变，我想，世界是还要毁坏，人们也还要吃苦的。
+
+十一月六日
