--- a/pages/周记202209.org
+++ b/pages/周记202209.org
@@ -153,3 +153,19 @@
 这看法倘不改变，我想，世界是还要毁坏，人们也还要吃苦的。
 
 十一月六日
+
+
+* [[2022_02_27]] [[Feb 27th, 2022]]
+** #今日鸡汤 #周记
+
+生孩子是我自己的决定，不是我孩子的要求。 所以孩子并不亏欠我什么。反而是我，理应让孩子过上更好的生活。
+
+** #今日文章 #周记
+
+《无题》
+
+“洋奴会说洋话。你主张读洋书，就是洋奴，人格破产了！受人格破产的洋奴崇拜的洋书，其价值从可知矣！但我读洋文是学校的课程，是政府的功令，反对者，即反对政府也。无父无君之无政府党，人人得而诛之。”
+
+“你说中国不好。你是外国人么？为什么不到外国去？可惜外国人看你不起……。”
+
+“你说甲生疮。甲是中国人，你就是说中国人生疮了。既然中国人生疮，你是中国人，就是你也生疮了。你既然也生疮，你就和甲一样。而你只说甲生疮，则竟无自知之明，你的话还有什么价值？倘你没有生疮，是说诳也。卖国贼是说诳的，所以你是卖国贼。我骂卖国贼，所以我是爱国者。爱国者的话是最有价值的，所以我的话是不错的，我的话既然不错，你就是卖国贼无疑了！”
