add post pages/周记模板.org

--- a/pages/磐石-每日分享.org
+++ b/pages/磐石-每日分享.org
@@ -1,4 +1,4 @@
-* 2022 年进度条 [ 15% ]，第 [ 10 ] 周。
+* 2022 年进度条 [ 15% ]，第 *10* 周（ [[周记202210]] ）。
 * 说明
 ** 只记录 [[随笔]]、[[记录]]、[[图片]] 各 2-3 个累计不超过 9 条的每日分享。
 ** 闲暇之余既然都是浪费时间，那为什么不选择自己喜欢的方式浪费呢？
@@ -12,5 +12,6 @@
 - [[箴言]]
 ** 与 [[https://www.geekpanshi.com/panshi/2021/index.html][博客随笔]] 兼容的部分
 - [[forblog]]
-** [[微博备份]]
+* 专题
 ** [[八孩妈]]
+** [[微博备份]]
