--- a/pages/周记202210.org
+++ b/pages/周记202210.org
@@ -1,4 +1,7 @@
-* [[2022_02_28]] [[Feb 28th, 2022]]
+#+类型: 2203
+#+主页: [[归档202203]]
+
+* 周一 [[2022_02_28]] [[Feb 28th, 2022]]
 ** #今日鸡汤 #周记
 
 有些牙刷，刷了一辈子牙坏掉的時候还得去刷皮鞋、刷浴缸。
@@ -11,3 +14,45 @@
 
 呵呵……，世上最廉价的大概就是付出吧。一贫如洗的真心，一事无成的温柔。
 
+* 周二 [[2022_03_01]] [[Mar 1st, 2022]]
+** #今日鸡汤 #周记
+
+周二
+** #今日文章 #周记
+
+周二
+* 周三 [[2022_03_02]] [[Mar 2nd, 2022]]
+** #今日鸡汤 #周记
+
+周三
+** #今日文章 #周记
+
+周三
+* 周四 [[2022_03_03]] [[Mar 3rd, 2022]]
+** #今日鸡汤 #周记
+
+周四
+** #今日文章 #周记
+
+周四
+* 周五 [[2022_03_04]] [[Mar 4th, 2022]]
+** #今日鸡汤 #周记
+
+周五
+** #今日文章 #周记
+
+周五
+* 周六 [[2022_03_05]] [[Mar 5th, 2022]]
+** #今日鸡汤 #周记
+
+周六
+** #今日文章 #周记
+
+周六
+* 周日 [[2022_03_06]] [[Mar 6th, 2022]]
+** #今日鸡汤 #周记
+
+周日
+** #今日文章 #周记
+
+周日
