--- a/pages/周记202210.org
+++ b/pages/周记202210.org
@@ -14,13 +14,28 @@
 
 呵呵……，世上最廉价的大概就是付出吧。一贫如洗的真心，一事无成的温柔。
 
+
 * 周二 [[2022_03_01]] [[Mar 1st, 2022]]
+
 ** #今日鸡汤 #周记
 
-周二
+学到一个新词—轻松成功学，大概是说通过不太努力、或者有捷径的轻松努力就能成功的一个概念。发现这个概念太真实了，确实有不少这样的人，也有不少这样的事。比如七天入门系列、某某叫你稳赚不赔、你离成功只差xx等等。每个人都梦想轻松成功，是人性，轻松成功学轻松成功了。
+
 ** #今日文章 #周记
 
-周二
+《我缺一个女朋友》
+
+如何用鲁迅的笔风，说自己缺一个女朋友
+
+我大抵是病了
+横竖都睡不着
+坐起来点了一支烟
+这悲伤没有由来
+黯然看着床头的两个枕头
+一个是我的
+另一个大抵也是我的.....
+
+
 * 周三 [[2022_03_02]] [[Mar 2nd, 2022]]
 ** #今日鸡汤 #周记
 
