--- a/pages/周记202210.org
+++ b/pages/周记202210.org
@@ -5,6 +5,7 @@
 ** #今日鸡汤 #周记
 
 有些牙刷，刷了一辈子牙坏掉的時候还得去刷皮鞋、刷浴缸。
+
 ** #今日文章 #周记
 
 《世上最廉价的东西》
@@ -16,7 +17,6 @@
 
 
 * 周二 [[2022_03_01]] [[Mar 1st, 2022]]
-
 ** #今日鸡汤 #周记
 
 学到一个新词—轻松成功学，大概是说通过不太努力、或者有捷径的轻松努力就能成功的一个概念。发现这个概念太真实了，确实有不少这样的人，也有不少这样的事。比如七天入门系列、某某叫你稳赚不赔、你离成功只差xx等等。每个人都梦想轻松成功，是人性，轻松成功学轻松成功了。
@@ -39,10 +39,21 @@
 * 周三 [[2022_03_02]] [[Mar 2nd, 2022]]
 ** #今日鸡汤 #周记
 
-周三
+智者不入爱河，寡王一路硕博，信女吃斋念佛，荣华富贵生活。
+
 ** #今日文章 #周记
 
-周三
+《变了》
+
+以前，
+父亲掏出口袋里的钞票，
+我们一眼能看出他的窘迫！
+
+如今，
+我们拿出手机扫码付款的时候，
+孩子却以为里面有用不完的钱…
+
+
 * 周四 [[2022_03_03]] [[Mar 3rd, 2022]]
 ** #今日鸡汤 #周记
 
