--- a/pages/笔记模板.org
+++ b/pages/笔记模板.org
@@ -5,10 +5,10 @@
 :END:
 ** 1
 ```
-#+类型: 2202
-#+日期: [[2022_02_24]]
-#+主页: [[归档202202]]
-#+date: [[Feb 24th, 2022]]
+#+类型: 2203
+#+日期: [[2022_03_03]]
+#+主页: [[归档202203]]
+#+date: [[Mar 3rd, 2022]]
 ```
 ** 随笔 #随笔
 *** 1
