--- a/pages/周记202210.org
+++ b/pages/周记202210.org
@@ -57,10 +57,19 @@
 * 周四 [[2022_03_03]] [[Mar 3rd, 2022]]
 ** #今日鸡汤 #周记
 
-周四
+“我18岁开始从古典文学中汲取许多知识，其中之一当时并不完全理解，那就是希腊作家普鲁塔克所说：我们内心获得的，将改变外在的现实”。 —— J. K. 罗琳哈佛大学演讲
+
 ** #今日文章 #周记
 
-周四
+《王蒙讲孔孟老庄》
+
+“六十而耳顺”，到了六十岁，听得进去话了，能接受别人对自己的忠 告、教诲了，能够自我反思，能够有一种自我调整的能力了，也有不较劲的意思，也有一点自己清醒了的意思。
+
+解惑是在四十岁，知天命是五十岁，是十年之后，二十年以后才能做到耳顺，说明耳顺是不容易的，听得进去话、接受得了忠告是不容易的，这是很有意味的。
+
+学会说话不容易，学会听话在某种意义上更不容易，所以孔子这位老先生对事物的分析都不是偶然的。
+
+
 * 周五 [[2022_03_04]] [[Mar 4th, 2022]]
 ** #今日鸡汤 #周记
 
