--- a/pages/周记202210.org
+++ b/pages/周记202210.org
@@ -73,10 +73,24 @@
 * 周五 [[2022_03_04]] [[Mar 4th, 2022]]
 ** #今日鸡汤 #周记
 
-周五
+从这次冲突得知：
+朋友的敌人是敌人，敌人的敌人是朋友。
+中立的也是敌人，弃权的还是敌人。
+反正不支持我的，都特么是敌人！
+
 ** #今日文章 #周记
 
-周五
+《人到中年》
+
+清明到来，我就 38 岁了，日暮乡关之感如针锥心薄雾从村头飘来，坐在橘园里，一些病果尚在枝头蒲公英又一次开出黄色的花，如一年一发的寂寞。
+
+能够思念的人越来越少。我渐渐原谅了人世的凉薄如果回到过去，我确定会把爱过的人再爱一遍把疼痛过的再疼一遍。
+
+但是我多么希望没有病痛的日子，一年或者一星期在春天的风里跳舞，踮起脚旋转他能看见也好，不能看见也罢。
+
+我只有一个愿望：生命静好，余生平安在春天的列车上有人为我让座不是因为我摇晃的身体。
+
+
 * 周六 [[2022_03_05]] [[Mar 5th, 2022]]
 ** #今日鸡汤 #周记
 
