--- a/pages/周记202210.org
+++ b/pages/周记202210.org
@@ -94,10 +94,25 @@
 * 周六 [[2022_03_05]] [[Mar 5th, 2022]]
 ** #今日鸡汤 #周记
 
-周六
+真正可怕的坏人是那些不知道自己坏，反而认为自己正确，认为自己很好的人，他们没有良心，却挥舞着良心的大棒打人，他们没有道德，却始终占据着道德高地。—— 莫言 #名人名言
+
 ** #今日文章 #周记
 
-周六
+《战士和苍蝇》
+
+Schopenhauer 说过这样的话：要估定人的伟大，则精神上的大和体格上的大，那法则完全相反。后者距离愈远即愈小，前者却见得愈大。
+
+正因为近则愈小，而且愈看见缺点和创伤，所以他就和我们一样，不是神道，不是妖怪，不是异兽。他仍然是人，不过如此。但也惟其如此，所以他是伟大的人。
+
+战士战死了的时候，苍蝇们所首先发见的是他的缺点和伤痕，嘬着，营营地叫着，以为得意，以为比死了的战士更英雄。但是战士已经战死了，不再来挥去他们。于是平苍蝇们即更其营营地叫，自以为倒是不朽的声音，因为它们的完全，远在战士之上。
+
+的确的，谁也没有发见过苍蝇们的缺点和创伤。
+
+然而，有缺点的战士终竟是战士，完美的苍蝇也终竟不过是苍蝇。
+
+去罢，苍蝇们！虽然生着翅子，还能营营，总不会超过战士的。你们这些虫牙们！
+
+
 * 周日 [[2022_03_06]] [[Mar 6th, 2022]]
 ** #今日鸡汤 #周记
 
