--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -4,11 +4,14 @@
 * 周一 [[2022_03_07]] [[Mar 7th, 2022]]
 ** #今日鸡汤 #周记
 
-一
+人的一生，其实就是时间和注意力分配的过程，你所专注的一切，反过来定义了你是谁，因此要格外珍惜你的注意力，认真选择你的情绪和思想所聚焦的对象。
+如果你只是不停被喧嚣带走注意力，或总是纠结于错误的事与人，迟早你会被外界塑造或污染，成为你不想成为的人，白白浪费掉你仅有一次的生命。
 
 ** #今日文章 #周记
 
-一
+《战争》
+
+战争就是某个大人物打着国家的旗号，驱赶底层老百姓上战场血拼。一个农民的儿子奔赴万里去杀死素不相识的另一个农民的儿子。最后死去的农民儿子得到的只是被吹得无比神圣的一块铜制的小牌牌和一面旗帜。父母失去了儿子，妻子失去丈夫，儿女失去了父亲。而无数农民儿子用命换来的却是那个大人物坐稳的宝座和一生的富贵。
 
 
 * 周二 [[2022_03_08]] [[Mar 8th, 2022]]
