--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -17,12 +17,21 @@
 * 周二 [[2022_03_08]] [[Mar 8th, 2022]]
 ** #今日鸡汤 #周记
 
-二
+中国人的神逻辑一：1. 你饭都没吃饱还关心这个干嘛？2. 你都吃饱饭了还关心这个干嘛？
+中国人的神逻辑二：1. 上面的政策是好的，都是下面的人把经念歪了；2. 下面的人也没办法，都是上边要求的。
 
 
 ** #今日文章 #周记
 
-二
+《二零二二年三月六日》
+
+在这儿你不能愤怒，否则你会时时处于愤怒中，而愤怒无济于事，除了微弱地证明你的心还没有变成铁、变成水泥、变成塑料，或者随便什么。
+
+那么你该怎么办没错，她不是你，早晨醒来你的脖子上没有一根锁住的铁链，昨晚你也不在逃难的人群中，你的天空没有炸弹在飞，你窗前的花像从前一样迎接春日。
+
+但此刻你感到快乐是一种羞耻，平静地生活是一种羞耻。
+
+20220306
 
 
 * 周三 [[2022_03_09]] [[Mar 9th, 2022]]
