dairy for 20220309 祝我生日快乐

--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -37,11 +37,31 @@
 * 周三 [[2022_03_09]] [[Mar 9th, 2022]]
 ** #今日鸡汤 #周记
 
-三
+兜兜转转，很多人还是找不到自己真正需要什么东西的，这恐怕就是人生。 #箴言
 
 ** #今日文章 #周记
 
-三
+古典《跃迁：成为高手的技术》）
+
+
+查理·芒格说：“要获得什么，先让自己配得上。”这也是在重新定义问题——得不得是外控的、无解的，但是配不配是内控的、有解的。
+
+举个有趣的例子，谈谈皇帝们如何管控一个思想的多层体系。
+
+封建国家没有互联网，大伙儿怎么想，主要看几个文化人怎么说，所以封建国家很重视思想控制，摧毁或者至少控制自由知识分子的思想。好，现在给你个机会穿越。如果穿越到古代，成为皇帝，要控制知识分子，你该怎么办？
+
+方案A：焚书坑儒——物理层面摧毁信息源，生理层面摧毁人，简单粗暴快，但春风吹又生。而且国家也暴戾十足，很快灭亡，如强秦。秦始皇不懂系统思考啊。
+
+方案B：文字狱——生理层面摧毁一小部分，心理层面的震慑大多很有效。但是文人马上变着法儿迭代，写个小说映射你，写个藏头诗挤对你，防不胜防，如清朝各种小说。
+
+方案C：找群宫廷文人，与之写文对骂——这个效果不佳，历来文章写得好的都是自由的灵魂，拿俸禄的效率不高。
+这些以暴易暴的线性思维对文化人不好用啊，最后设计出来最精妙的，是一套自上而下的系统解决方案。
+
+方案D：科举制度——设计一套在自我实现（家国天下）、归属感、认同感（光宗耀祖、封妻荫子）、生理和心理（颜如玉、黄金屋）方面符合马斯洛需求层次理论的完整多层结构，以及自上而下降维攻击的解决方案，直接改变价值观。开科取士，天下共趋之。
+
+什么？写自由议论文？别闹，老子正准备考试呢！
+
+这个封闭的小系统非常有效，从内部几乎完全不可灭。一直到1840年我们集体被炮声震醒，被更高层级降维攻击，即现代社会的科学、民主与经济体系，我们才发现，这些系统更强大，比自洽更重要的是开放。
 
 
 * 周四 [[2022_03_10]] [[Mar 10th, 2022]]
