--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -67,11 +67,16 @@
 * 周四 [[2022_03_10]] [[Mar 10th, 2022]]
 ** #今日鸡汤 #周记
 
-四
+抽烟可产生多巴胺，谈恋爱也可以，一根烟所产生的多巴胺最多可维持个 2 小时。也就是说一天只需 12 根烟，你就不需要爱情！
 
 ** #今日文章 #周记
 
-四
+《关于人性》
+
+西汉时有个贪官，因为拍皇帝马屁拍
+得好，平步青云，官至宰相后被封侯，划分自家土地时利用手中权力，多占用农民四万多亩。
+
+可偏偏就是这样一个人，年幼时为了读书凿壁偷光。
 
 
 * 周五 [[2022_03_11]] [[Mar 11th, 2022]]
