--- a/pages/磐石-每日分享.org
+++ b/pages/磐石-每日分享.org
@@ -1,4 +1,5 @@
 * 2022 年进度条 [ 18% ]，第 *11* 周（ [[周记202211]] ）。
+* 关于我：[[https://www.geekpanshi.com/panshi/][博客]] [[https://github.com/xingangshi][GitHub]] [[https://twitter.com/geekpanshi][Twitter]] [[https://weibo.com/u/6726260941][微博]] 。
 * 说明
 ** 只记录 [[随笔]]、[[记录]]、[[图片]] 各 2-3 个累计不超过 9 条的每日分享。
 ** 闲暇之余既然都是浪费时间，那为什么不选择自己喜欢的方式浪费呢？
@@ -6,7 +7,7 @@
 ** 忌好为人师、减少内耗，轻装践行。
 ** 依赖于任何一个非纯文本格式的笔记软件，你就会失去自由。
 ** 如何让别人愿意帮你？首先，你要证明你不会咬人。
-** 关于我 [[https://www.geekpanshi.com/panshi/][博客]] [[https://github.com/xingangshi][GitHub]] [[https://twitter.com/geekpanshi][Twitter]] [[https://weibo.com/u/6726260941][微博]] 。
+** 新的一岁，希望自己特能肝、能肝不会挂。 [[2022_03_09]]
 * 归类
 ** 日常记录
 - [[图片]]
