--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -80,13 +80,19 @@
 
 
 * 周五 [[2022_03_11]] [[Mar 11th, 2022]]
-** #今日鸡汤 #周记
+** #今日鸡汤 #周记 #聊天模板
 
-五
+怎么不聊了？周三了忏悔了？又要努力给资本家吸血了？贱不贱啊？什么时候能站起来啊？都把手机掏出来！聊他妈的！做新时代的主人！做领导的爹！ 我觉得有些群员心态还是没有放稳，现在这么好的带薪聊天机会，不珍惜，你给老板打工搬砖，你能学到东西吗？
 
 ** #今日文章 #周记
 
-五
+《法西斯谎言简史》
+
+如果想要了解我们棘手的当下，就需要关注法西斯意识形态家的历史，关注他们的修辞是如何以及为何导致了大屠杀、战争和毁灭。
+
+……，答案是，他们是通过散布意识形态谎言得逞的。
+
+法西斯分子的政治权力在很大程度上源自对真相的收买和对谎言的广泛宣传。
 
 
 * 周六 [[2022_03_12]] [[Mar 12th, 2022]]
