--- a/pages/归档202203.org
+++ b/pages/归档202203.org
@@ -1,11 +1,10 @@
-* 日志归档
 #+类型: 2022年
 #+主页: [[磐石-每日分享]]
 :PROPERTIES:
 :query-sort-by: 日期
 :query-table: true
 :query-sort-desc: true
-:query-properties: [:类型 :date]
+:query-properties: [:类型 :主页 :日期]
 :END:
 #+BEGIN_QUERY
 {:title [:h3 "2022 年 3 月归档"]
