--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -50,14 +50,14 @@
 
 封建国家没有互联网，大伙儿怎么想，主要看几个文化人怎么说，所以封建国家很重视思想控制，摧毁或者至少控制自由知识分子的思想。好，现在给你个机会穿越。如果穿越到古代，成为皇帝，要控制知识分子，你该怎么办？
 
-方案A：焚书坑儒——物理层面摧毁信息源，生理层面摧毁人，简单粗暴快，但春风吹又生。而且国家也暴戾十足，很快灭亡，如强秦。秦始皇不懂系统思考啊。
+方案 A：焚书坑儒——物理层面摧毁信息源，生理层面摧毁人，简单粗暴快，但春风吹又生。而且国家也暴戾十足，很快灭亡，如强秦。秦始皇不懂系统思考啊。
 
-方案B：文字狱——生理层面摧毁一小部分，心理层面的震慑大多很有效。但是文人马上变着法儿迭代，写个小说映射你，写个藏头诗挤对你，防不胜防，如清朝各种小说。
+方案 B：文字狱——生理层面摧毁一小部分，心理层面的震慑大多很有效。但是文人马上变着法儿迭代，写个小说映射你，写个藏头诗挤对你，防不胜防，如清朝各种小说。
 
-方案C：找群宫廷文人，与之写文对骂——这个效果不佳，历来文章写得好的都是自由的灵魂，拿俸禄的效率不高。
+方案 C：找群宫廷文人，与之写文对骂——这个效果不佳，历来文章写得好的都是自由的灵魂，拿俸禄的效率不高。
 这些以暴易暴的线性思维对文化人不好用啊，最后设计出来最精妙的，是一套自上而下的系统解决方案。
 
-方案D：科举制度——设计一套在自我实现（家国天下）、归属感、认同感（光宗耀祖、封妻荫子）、生理和心理（颜如玉、黄金屋）方面符合马斯洛需求层次理论的完整多层结构，以及自上而下降维攻击的解决方案，直接改变价值观。开科取士，天下共趋之。
+方案 D：科举制度——设计一套在自我实现（家国天下）、归属感、认同感（光宗耀祖、封妻荫子）、生理和心理（颜如玉、黄金屋）方面符合马斯洛需求层次理论的完整多层结构，以及自上而下降维攻击的解决方案，直接改变价值观。开科取士，天下共趋之。
 
 什么？写自由议论文？别闹，老子正准备考试呢！
 
@@ -98,11 +98,31 @@
 * 周六 [[2022_03_12]] [[Mar 12th, 2022]]
 ** #今日鸡汤 #周记
 
-六
+中国人从不爱中国人，但却很爱国，爱人是需要投入情感，付出时间、精力、经济成本的，爱国只需付出口水……。 胡适 #名人名言
 
 ** #今日文章 #周记
 
-六
+《人为什么要读书》 —— 胡适
+
+从前有一位大哲学家 做了一篇《读书乐》，说到读书的好处，他说：“书中自有千钟粟，书中自有黄金屋，书中自有颜如玉。”这意思就是说，读了书可以做大官，获厚禄，可以不至于住茅草房子，可以娶得年轻的漂亮太太（台下哄笑）。诸位听了笑起来，足见诸位对于这位哲学家所说的话不十分满意，现在我就讲所以要读书的别的原因。
+
+为什么要读书？有三点可以讲：第一，因为书是过去已经知道的知识学问和经验的一种记录，我们读书便是要接受这人类的遗产；第二，为要读书而读书，读了书便可以多读书；第三，读书可以帮助我们解决困难，应付环境，并可获得思想材料的来源。
+
+第一，因为书是代表人类老祖宗传给我们的知识的遗产，我们接受了这遗产，以此为基础，可以继续发扬光大，更在这基础之上，建立更高深更伟大的知识。
+
+如果每样东西，要个个人从头学起，而不去利用过去的知识，那不是太麻烦了吗？所以人有了这知识的遗产，就可以自己去成家立业，就可以缩短工作，使有余力做别的事。
+
+第二点稍复杂，就是为读书而读书。读书不是那么容易的一件事情，不读书不能读书，要能读书才能多读书。
+
+读书固然可以扩充知识，但知识越扩充了，读书的能力也越大，这便是“为读书而读书”的意义。读书的目的在于读书，要读书越多才可以读书越多。
+
+第三点，读书可以帮助解决困难，应付环境，供给思想材料。知识是思想材料的来源。
+
+读书好像用兵，养兵求其能用，否则即使坐拥十万二十万的大兵也没有用处，难道只好等他们“兵变”吗？
+
+至于“读什么书”，我可以很诚恳地说，中国旧籍是经不起读的。希望大家不要怕读书，起初的确要查阅字典，但假使能下一年苦功，继续不断做去，那么，在一二年中定可开辟一个乐园，还只怕求知的欲望太大，来不及读呢。
+
+我总算是老大哥，今天我就根据我过去三十五年读书的经验，给你们这一个临别的忠告。
 
 
 * 周日 [[2022_03_13]] [[Mar 13th, 2022]]
