--- a/pages/周记202211.org
+++ b/pages/周记202211.org
@@ -128,9 +128,19 @@
 * 周日 [[2022_03_13]] [[Mar 13th, 2022]]
 ** #今日鸡汤 #周记
 
-日
+降低离婚率最好方法就是先降低结婚率。 #计划生育
 
 ** #今日文章 #周记
 
-日
+《做酸酸，防冠冠》 #疫情
+
+红管管 白签签
+排队一起做酸酸
+做完酸酸吃饭饭
+吃完饭饭等单单
+单单出来到时间
+继续排队做酸酸
+在家呆着防冠冠
+没事不能胡转转
+胡转可能得冠冠
 
