--- a/pages/周记202212.org
+++ b/pages/周记202212.org
@@ -2,13 +2,33 @@
 #+主页: [[归档202203]]
 
 * 周一 [[2022_03_14]] [[Mar 14th, 2022]]
-** #今日鸡汤 #周记
+** #今日鸡汤 #周记 #疫情
 
-1
+张宏文，划重点：1. 消除恐惧是我们必须走出的第一步；2. 争论毫无意义。事儿得一步一步做。目前完全放开，不可能也不现实；3. 奥密克戎这波是倒春寒！谢谢张医生，非常清晰！
 
 ** #今日文章 #周记
 
-1
+《学生和玉佛》
+
+一月二十八日《申报》号外载二十七日北平专电曰：故宫古
+物即起运，北宁平汉两路已奉令备车，团城白玉佛亦将南运。
+
+二十九日号外又载二十八日中央社电传教育部电平各大学，
+略曰：“据各报载榆关告紧之际，北平各大学中颇有逃考及提前
+放假等情，均经调查确实。查大学生为国民中坚份子，讵容妄自
+惊扰，败坏校规，学校当局迄无呈报，迹近宽纵，亦属非是。仰
+该校等迅将学生逃考及提前放假情形，详报核办，并将下学期上
+课日期，并报为要。
+
+三十日，“堕落文人”周动轩先生见之，有诗叹曰：
+
+寂寞空城在，仓皇古董迁，
+
+头儿夸大口，面子靠中坚。
+
+惊扰讵云妄？奔逃只自怜：
+
+所嗟非玉佛，不值一文钱。
 
 
 * 周二 [[2022_03_15]] [[Mar 15th, 2022]]
