--- a/pages/周记202212.org
+++ b/pages/周记202212.org
@@ -34,12 +34,27 @@
 * 周二 [[2022_03_15]] [[Mar 15th, 2022]]
 ** #今日鸡汤 #周记
 
-2
-
+成年人有一点很重要需要注意：直接拒绝，比有条件拒绝要重要。 #箴言
 
 ** #今日文章 #周记
 
-2
+保尔·艾吕雅的《宵禁》
+
+门口有人把守着你说怎么办
+
+我们被人禁闭着你说怎么办
+
+街上交通断绝了你说怎么办
+
+城市被人控制着你说怎么办
+
+全城居民在挨饿你说怎么办
+
+我们手里没武器你说怎么办
+
+黑夜已经来到了你说怎么办
+
+我们因此相爱了你说怎么办
 
 
 * 周三 [[2022_03_16]] [[Mar 16th, 2022]]
