--- a/pages/周记202212.org
+++ b/pages/周记202212.org
@@ -60,11 +60,15 @@
 * 周三 [[2022_03_16]] [[Mar 16th, 2022]]
 ** #今日鸡汤 #周记
 
-3
+死亡不是消失，遗忘才是，有位老友，我经常点进他朋友圈看，只是没再更新。 #人生
 
 ** #今日文章 #周记
 
-3
+《善其事必先休息好》
+
+长时间耗在一个问题上，身体和大脑都会疲惫。当心态失衡时，解决问题的能力也会直线下降。我经常会陷入一种急迫解决问题的困境，直到身体完全扛不住才放弃。这其实是一种低效的方式，情绪会在这个过程中逐渐压制理智，让人很难全面的思考问题。
+
+与自己平和相处，接纳自己的不足，休息好重新出发才能走的更长远。所以当遇到自己很难解决的问题时，试着先确保身体状态是正常的，如果身体很疲惫，先休息而不是直接攻克难题。
 
 
 * 周四 [[2022_03_17]] [[Mar 17th, 2022]]
