--- a/pages/周记202212.org
+++ b/pages/周记202212.org
@@ -74,12 +74,24 @@
 * 周四 [[2022_03_17]] [[Mar 17th, 2022]]
 ** #今日鸡汤 #周记
 
-4
+有些人：你好好和他说话，他爱答不理；臭骂他一顿，反而老实了。这是慕强心理在作怪，不适合所有人，但适合一部分人。你总是做事碰壁，可以试一下这个方法。
 
 ** #今日文章 #周记
 
-4
+《人日鸡汤：要享受苦难》 
 
+在同一辆列车上，有人感染有人安全，这是机体免疫力；
+
+同样的隔离，有人一年吃喝不愁，有人一周就拮据，这是财务免疫力；
+
+同样呆在家里，有人读书、学习、锻炼，空中课堂，努力提升，
+有人睡觉、电视、打游戏。混混沌沌过一天，这是价值免疫力；
+
+一样的灾难，有人阳光向上勇往直前，有人怨天尤人、仇视社会，这是心理免疫力；
+
+这场灾难，是一个大浪淘沙的过程，对所有人的体质、认知、阅历、人性、良知、勇气、思想、灵魂、价值观……。
+
+是一次赤裸裸的筛选。所以，战胜意外与不幸，最重要的是提升所有的免疫力。
 
 * 周五 [[2022_03_18]] [[Mar 18th, 2022]]
 ** #今日鸡汤 #周记
