--- a/pages/周记202212.org
+++ b/pages/周记202212.org
@@ -96,11 +96,17 @@
 * 周五 [[2022_03_18]] [[Mar 18th, 2022]]
 ** #今日鸡汤 #周记
 
-5
+知识来源于生活，也是驾驭生活的能力，所以，学习跟生活中的很多道理是互通的，都是一样一样的。 #读书与思考
 
 ** #今日文章 #周记
 
-5
+《家族的重要性》
+
+曾经有人说过一句非常扎心的话，说平民子弟，真正明白社会真相，普遍在 40 岁。但已经进不了圈子，上不了盘桌。富贵子弟，25 岁已经洞若观火，杀伐决断了。
+
+仔细回头想想，不得不承认，现实很多时候还真是这么回事。人生最大的浪费，其实不是金钱的浪费，而是自己努力奋斗了半生，发现自己拼命往前的路走错了，方向走偏了。再回头，为时已晚。
+
+普通人走弯路，最根本的还是因为自己认知局限，包括身边能影响和帮助自己的人认知也存在局限。
 
 
 * 周六 [[2022_03_19]] [[Mar 19th, 2022]]
