--- a/pages/周记202212.org
+++ b/pages/周记202212.org
@@ -128,9 +128,30 @@
 * 周日 [[2022_03_20]] [[Mar 20th, 2022]]
 ** #今日鸡汤 #周记
 
-7
+所谓的“西方势力”，是个伪概念，应该叫做国际共识。原因很简单，西方不是一个国家，而是几十个最富裕和平、最有国际影响力的国家，而且是实现了民有、民治、民享的自由民主国家。所谓“亡我之心不死”，一个脏乱差的环境，亡你干嘛？除非只有一种可能，就是你在危害全世界。
 
 ** #今日文章 #周记
 
-7
+《九条人性潜规则》
+
+成年人不得不懂的九条人性潜规则：
+
+1. 不到万不得已，不要找别人借钱，因为大部分情况下都是让你失望的；如果别人向你借钱，你要么不借，要么要做好他不还的准备。
+
+2. 宁可跟聪明人争执一年，也不要跟傻瓜争论一秒，憎恨别人，伤不了别人一根汗毛，却把自己的日子过成了炼狱。
+
+3. 与人交谈的时候要注意倾听，不要急于评价，也不要急于给意见。大多数的时候，倾诉者是需要共情的，而不是你的说教。人的天性之一就是总认为自己的是对的，思考的时候他像个智者，说话的时候要像个普通人。
+
+4. 不要对他人有过高的期待，不要对关系的持久亲密太过于乐观。人走茶凉就是最好的关系状态。
+
+5. 别人之所以会帮你，是因为对方觉得你对他来说有好处。最重要的是不是别人有没有爱我们，而是我们值不值得被别人爱。只有永远的利益，才会有永远的朋友。
+
+6. 厉害的人都不喜欢社交吗？不只是他们的社交里面没有你而已，不要总是想着挤进别人的圈子，强大你自己，把你自己变成贞子才是社交的根本。你没有价值，认识谁也没有用，你要是有价值，会有一堆的人来认识你。
+
+7. 与人交心，要慢一点，再慢一点儿，与人绝交要快一点，再快一点。人可以善良，但也有锋芒。你能无底线的原谅谁，谁就能无底线的伤害你。以十倍的速度亲近你的人，也会以十倍的速度离开你。
+
+8. 决定帮助别人的时候，不要把话说的太满。要说我能力有限，没有太大的把握，我只能尽力试一试，如果办不好，还请你多原谅。这样的话，万一办不好，别人也不会失望，万一你办好了，对别人来说是惊喜。
+
+9.看透一个人有三个方法，你看到身边最亲密的朋友都是什么货色，二看他是看他用时间都是用来干什么。三看他在钱上的态度，大多数人都是嘴上称兄道弟，到了钱上都是自私自利，所以你要小心小脸。
+
 
