--- a/pages/周记202213.org
+++ b/pages/周记202213.org
@@ -4,11 +4,33 @@
 * 周一 [[2022_03_21]] [[Mar 21st, 2022]]
 ** #今日鸡汤 #周记
 
-1
+如果有人跟你扯什么一个巴掌拍不响，别犹豫，上去就给他一巴掌，这时他肯定立马暴怒。你反问他：我这是怎么拍响的？他肯定继续暴怒：我他妈那是个比喻！我意思是说不要觉得谁都是在莫名其妙别人，被欺负那个人应该先反思自己！这时你可以说：对啊，所以你挨这一巴掌也应该先反思一下自己。
 
 ** #今日文章 #周记
 
-1
+《也许你的顿悟，只是别人的基本功》
+
+我曾经在《定位》一书中看过这样一句话，非常的震撼。
+
+原话是这么说的：
+
+任何问题都不是孤立存在的，一定有人曾经遇到过，并且已经有更好的解决办法了，只是我还不知道；我不应该在黑暗中独自前行，也许我的顿悟，只是别人的基本功！我应该站在巨人的肩膀上，学习更成熟的经验和方法，然后再来解决这个问题。
+
+中间有一句话特别扎心”也许你的顿悟，只是别人的基本功”。
+
+所以我现在就特别警惕这件事，做任何事情的时候，我都要停下来，先去找一找这个领域有没有巨人，如果有，先用知识树学一遍，然后再去实操。这也是我之前反复在提的”二元学习法”，很多人都是经验主义者，他们不喜欢学习巨人的知识，只喜欢靠自己的感悟去获得成功。
+
+自己的感悟当然也很重要，但是如果只有自己的感悟，就会出现三大非常大的问题：
+
+第一，你会走很多弯路。因为你每个坑都要趟一遍，甚至趟几遍。
+第二，成功的速度比较慢。经验主义者很多是大器晚成，而且他们的成功都是靠经验堆出来的，走了很多弯路。
+第三，天花板比较明显。因为成功的边界，就是你认知的边界。
+
+所以，一定要有巨人思维，向有结果的人学习。虽然别人的经验无法完全 100% 复制给你，但是如果你能用 10 个小时的时间，就学到别人辛辛苦苦几十年时间感悟的东西的 50%，那也非常划算了是不是？
+
+大多数人都只是身体上很勤奋，但是思想上很懒惰，他们不懂得站在巨人的肩膀上前行，即使你跟他说，巨人思维很重要，他们依然会觉得”哦，是吗？但是我觉得只有我自己亲身经历的才是自己的。
+
+这，有点傻。
 
 
 * 周二 [[2022_03_22]] [[Mar 22nd, 2022]]
