--- a/pages/周记202213.org
+++ b/pages/周记202213.org
@@ -36,12 +36,31 @@
 * 周二 [[2022_03_22]] [[Mar 22nd, 2022]]
 ** #今日鸡汤 #周记
 
-2
+有一辆 70 年的山寨德国车都快散架了，既不肯换发动机，也不肯换刹车。
+
+乘客们还天真的以为只要换个驾驶员就好了。厉害的是这辆破车涂上了一身红漆后竟然准备上高速公路。更要命的是，现在的驾驶员一边开车还一边做梦！最近又开上了逆行车道，还不许乘客打开窗户看外面……
 
 
 ** #今日文章 #周记
 
-2
+《对着干》
+
+
+社会和教育系统的目的，跟个人的意愿是有冲突的。很多人说要相信学校，相信政策，相信社会，未来会越来越好。这点根本上讲没错，因为政策刺激经济，经济促进社会，社会发展做大蛋糕，最后每个人分到的自然就多了。
+
+但社会和教育系统的目的是让你领蛋糕，而个人奋斗的目的是做那个切蛋糕和抢蛋糕的人。
+
+社会和教育系统自然不可能鼓励所有人都这么做，更不可能传授切蛋糕抢蛋糕的方法。所以按部就班的跟着政策跟着社会跟着学校，最后的结果就是永远只能在时代温饱平均水平线上下挣扎。
+
+对比以往，比如20年前，温饱水平线确实提高了，客观来说你确实变好了，进步了。但这只是纵向，横向来说你其实没什么变化。知识媒体说现在的白领和以前父母时代的工人农民没太大区别，指的就是这么回事。
+
+因此很多人说学校和社会不接轨，不教点真正有用的，学校本来就不能教点有用的。教点有用的，每个人都精明能干，都情商爆表，都游刃有余，毕业了之后都独当一面，快速升职。问题就来了，社会哪有那么多管理类的高薪岗位？
+
+全国的211、985每年毕业人数，起码大几十万快接近100万了，这些人各个都想要高薪想要管理，这咋样都办不到哇。只能用自然筛选机制，即不是教育，而是放马跑，自然筛选。
+
+天赋好的极少数，筛选出来通过竞争，可以独当一面成为管理者。天赋普通的，天赋差的，不教育，不教导，自然发展，毕业了自然成为螺丝钉，底层小卒。整个机制就是这么安排的。
+
+所以你特别在意老师家长的话，积极配合，基本上最后不会有什么好结果。因为你必须明白这个常识：哪怕是天赋好的人，他也不是靠学校教育取胜的，都是靠自学。那天赋普通和天赋较差的，就更要投入千百倍的努力去自学了。
 
 
 * 周三 [[2022_03_23]] [[Mar 23rd, 2022]]
