--- a/pages/归档202202.org
+++ b/pages/归档202202.org
@@ -1,7 +1,7 @@
 #+类型: 2022年
 #+主页: [[磐石-每日分享]]
 :PROPERTIES:
-:query-sort-by: 日期
+:query-sort-by: date
 :query-table: true
 :query-sort-desc: true
 :query-properties: [:类型 :日期 :date]
