--- a/pages/周记202213.org
+++ b/pages/周记202213.org
@@ -52,11 +52,11 @@
 
 社会和教育系统自然不可能鼓励所有人都这么做，更不可能传授切蛋糕抢蛋糕的方法。所以按部就班的跟着政策跟着社会跟着学校，最后的结果就是永远只能在时代温饱平均水平线上下挣扎。
 
-对比以往，比如20年前，温饱水平线确实提高了，客观来说你确实变好了，进步了。但这只是纵向，横向来说你其实没什么变化。知识媒体说现在的白领和以前父母时代的工人农民没太大区别，指的就是这么回事。
+对比以往，比如 20 年前，温饱水平线确实提高了，客观来说你确实变好了，进步了。但这只是纵向，横向来说你其实没什么变化。知识媒体说现在的白领和以前父母时代的工人农民没太大区别，指的就是这么回事。
 
 因此很多人说学校和社会不接轨，不教点真正有用的，学校本来就不能教点有用的。教点有用的，每个人都精明能干，都情商爆表，都游刃有余，毕业了之后都独当一面，快速升职。问题就来了，社会哪有那么多管理类的高薪岗位？
 
-全国的211、985每年毕业人数，起码大几十万快接近100万了，这些人各个都想要高薪想要管理，这咋样都办不到哇。只能用自然筛选机制，即不是教育，而是放马跑，自然筛选。
+全国的 211、985 每年毕业人数，起码大几十万快接近 100 万了，这些人各个都想要高薪想要管理，这咋样都办不到哇。只能用自然筛选机制，即不是教育，而是放马跑，自然筛选。
 
 天赋好的极少数，筛选出来通过竞争，可以独当一面成为管理者。天赋普通的，天赋差的，不教育，不教导，自然发展，毕业了自然成为螺丝钉，底层小卒。整个机制就是这么安排的。
 
@@ -66,11 +66,17 @@
 * 周三 [[2022_03_23]] [[Mar 23rd, 2022]]
 ** #今日鸡汤 #周记
 
-3
+不要因别人不能成为我们所希望的人而愤怒，因为我们自己也难以成为自己所希望的人。
 
 ** #今日文章 #周记
 
-3
+《珍惜当下》
+
+通过客机事件和今年的疫情，仿佛在提醒我们：
+
+钱财再好，也好不过生命，名利再大，大不过健康。人间的饭，吃一碗少一碗，人间的面，见一面少一面。人生本就是一次次减法，来日并不方长。
+
+这个世界我们只来一次，所以，吃你想吃的饭，见你想见的人看喜欢的风景,做你喜欢的事，你永远不知道明天和意外哪个先到。所以，珍惜现在的每一分每一秒。
 
 
 * 周四 [[2022_03_24]] [[Mar 24th, 2022]]
