--- a/pages/周记202213.org
+++ b/pages/周记202213.org
@@ -82,11 +82,35 @@
 * 周四 [[2022_03_24]] [[Mar 24th, 2022]]
 ** #今日鸡汤 #周记
 
-4
+林徽因说：人与人之间，若灵魂不能共振，交流不能同频，仅仅只是浅浅的遇见，终究会成为陌路，各自天涯。 #名人名言
 
 ** #今日文章 #周记
 
-4
+《如何找到自己一生的热爱、喜欢的工作？》
+
+唯一的解决办法，就是多尝试，多经历。
+
+真的没有别的办法。
+
+有些人很幸运，他们很容易知道自己的兴趣点，干这个就很开心，干别的就很痛苦，特别明显。
+
+但有些人则不知道自己真正感兴趣的是什么，可能花一辈子的时间都在寻找。
+
+针对寻找自己热爱的东西，我可以分享的思路是：
+
+1、有哪些事情，是你毫无费力，就能做的很好的。
+
+2、你人生中坚持的最长时间的事情是什么？
+
+3、有什么事情，不给钱也愿意做？
+
+4、无所事事的时候，你愿意做哪些事？
+
+5、去主动尝试一些你从没尝试过的事情。
+
+6、多读书，有时候看书时会有灵感迸发。
+
+7、多做事，比起躺着，多做事更容易碰到自己的兴趣点。如何找到自己一生的热爱？喜欢的工作？
 
 
 * 周五 [[2022_03_25]] [[Mar 25th, 2022]]
