--- a/pages/周记202213.org
+++ b/pages/周记202213.org
@@ -116,11 +116,24 @@
 * 周五 [[2022_03_25]] [[Mar 25th, 2022]]
 ** #今日鸡汤 #周记
 
-5
+没有受过资本主义一天苦，愣是批了它七十多年；没有享过共产主义一天福，愣是要为它奋斗终生。
 
 ** #今日文章 #周记
 
-5
+《写作的目的》
+
+99.99% 的人都没搞清楚写作是什么。
+
+写作不是阅读，不是笔记，不是思考，不是想法，不是散步，不是习惯，更不是什么工具，流程，方法，系统。
+
+写作是明知没有才华时，
+你还继续写。
+
+写作是始终无人问津时，
+你还继续写。
+
+写作是遭受冷嘲热讽时，
+你还继续写。
 
 
 * 周六 [[2022_03_26]] [[Mar 26th, 2022]]
