--- a/pages/周记202213.org
+++ b/pages/周记202213.org
@@ -139,11 +139,23 @@
 * 周六 [[2022_03_26]] [[Mar 26th, 2022]]
 ** #今日鸡汤 #周记
 
-6
+大多数人的一生都殚精竭虑、费尽心机地为得到幸福而努力。他们制订让自己幸福的计划，为了搜集幸福的点滴去旅行、去工作。当生命离去时，他们才意识到，幸福的碎片永远搜集不够，幸福只是过程。他们忘记了这个。 —— 马洛伊·山多尔《草叶集》
 
 ** #今日文章 #周记
 
-6
+《你告诉我什么是爱？》
+
+一个真实的故事，一对夫妻结婚几年没有怀孕，婆婆天天给媳妇脸色看，老公夹在中间很是无助。
+
+一天丈夫拿来一份检查报告显示他不能生育。媳妇爆发了这些年的隐忍委屈一下子出来了。婆婆看到这场面明白了马上讨好儿媳妇不能离婚，离了她的儿子肯定娶不到媳妇了。
+
+丈夫对她说尊重你的选择。媳妇想了一晚上决定离婚。这么多年来，他们是有感情的，一直是婆婆作祟，现在婆婆改变了，早上做她喜欢的饭菜，连家务也不让她做，她想这辈子没有孩子就这么过吧，领养一个吧。
+
+后来领养了一个男孩。
+
+十几年后婆婆去世了，儿子也上大学了。她在家收拾屋子把每个角落都大扫除，这时候她看到一份检查报告，当年不能生育的是她，不是她丈夫。
+
+她瞬间汨崩，是她的丈夫把过错都推在了他身上了。她问他丈夫为什么连她也隐瞒，丈夫说你这个人脸上藏不住事你会装的不像，我妈会怀疑的，我不这样做我怕我妈会逼我离婚，我不想离婚，哪怕你不能生育，我没有自己的亲生孩子也不想和你离。
 
 
 * 周日 [[2022_03_27]] [[Mar 27th, 2022]]
